Fixed about page HTML

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -8,199 +8,197 @@
         <div class="container-fluid row text-center" style="padding-bottom: 10px !important;">
             <h1>About DevilSec</h1>
             <p> DevilSec was founded as a student group at ASU to socialize, network, and learn the current industry standard tools of the cybersecurity field. The group serves as an entry point for students of computer science and other majors to compensate for the lack of current offensive cybersecurity curriculum universities' lack or otherwise teach using dated and irrelevant information and resources.</p>
-<p>DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.
-	    </p>
-	</div>
-            <div class="container-fluid row text-center">
-                <h3>Founders</h3>
+            <p>DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.
+            </p>
+        </div>
+        <div class="container-fluid row text-center">
+            <h3>Founders</h3>
+            <div class="row">
+                <div class="col profile">
+                    <p> Allen Foust </p>
+                    <img src="/src/assets/img/DevilSecLogo.png"/>
+                    <div>
+                        <a href="https://www.linkedin.com/in/allenfoust" target="_blank">
+                            <i class="linkedin"></i>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col profile">
+                    <p> Dr. Ankur Chowdhary </p>
+                    <img src="/src/assets/img/DevilSecLogo.png"/>
+                    <div>
+                        <a href="https://github.com/ankur8931" target="_blank">
+                            <i class="github"></i>
+                        </a>
+                        <a href="https://ankurchowdhary.com/" target="_blank">
+                            <i class="firefox"></i>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="col profile">
+                    <p> Matt Keeley </p>
+                    <img src="/src/assets/img/DevilSecLogo.png"/>
+
+                    <div>
+                        <a href="https://github.com/MattKeeley" target="_blank">
+                            <i class="github"></i>
+                        </a>
+
+                        <a href="https://www.linkedin.com/in/mattrkeeley" target="_blank">
+                            <i class="linkedin"></i>
+                        </a>
+
+                        <a href="https://azserg.com/" target="_blank">
+                            <i class="firefox"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <h3>Officers</h3>
+            <div class="row">
+                <div class="col profile">
+                    <b> President:</b>
+                    <p> Lani Sears </p>
+                    <img src="/src/assets/img/lani.png"/>
+                    <div>
+                        <a href="https://github.com/leilanisears" target="_blank">
+                            <i class="github"></i>
+                        </a>
+
+                        <a href="https://www.linkedin.com/in/leilanisears" target="_blank">
+                            <i class="linkedin"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col profile">
+                    <b> Vice President:</b>
+                    <p> Tayari </p>
+                    <img src="/src/assets/img/tayari.png"/>
+                    <div>
+                        <a href="https://github.com/daylamtayari" target="_blank">
+                            <i class="github"></i>
+                        </a>
+
+                        <a href="https://www.linkedin.com/in/daylamtayari" target="_blank">
+                            <i class="linkedin"></i>
+                        </a>
+
+                        <a href="https://tayari.gg" target="_blank">
+                            <i class="firefox"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col profile">
+                    <b> Treasurer:</b>
+                    <p> Gursharan Singh </p>
+                    <img src="/src/assets/img/singh.png"/>
+
+                    <div>
+                        <a href="https://twitter.com/Gursharan1337" target="_blank">
+                            <i class="twitter"></i>
+                        </a>
+
+                        <a href="https://www.linkedin.com/in/singh1337/" target="_blank">
+                            <i class="linkedin"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="col profile">
+                    <b> Secretary:</b>
+                    <p> Thad Shinno </p>
+                    <img src="/src/assets/img/thad.png"/>
+                    <div>
+                        <a href="https://github.com/sadeli413" target="_blank">
+                            <i class="github"></i>
+                        </a>
+                    </div>
+                </div>
+                <h3> Staff </h3>
                 <div class="row">
                     <div class="col profile">
-                        <p> Allen Foust </p>
-                        <img src="/src/assets/img/DevilSecLogo.png"></img>
-			<div>
-			<a href="https://www.linkedin.com/in/allenfoust" target="_blank">
-                                <i class="linkedin"></i>
-                            </a>
-
-                        </div>
-                    </div>
-		    <div class="col profile">
-			    <p> Dr. Ankur Chowdhary </p>
-			    <img src="/src/assets/img/DevilSecLogo.png"></img>
-			<div>
-				<a href="https://github.com/ankur8931" target="_blank">
-					<i class="github"></i>
-				</a>
-				<a href="https://ankurchowdhary.com/" target="_blank">
-					<i class="firefox"></i>
-				</a>
-
-			</div>
-		    </div>
-                    <div class="col profile">
-                        <p> Matt Keeley </p>
-                        <img src ="/src/assets/img/DevilSecLogo.png"></img>
-
+                        <p>Ero</p>
+                        <img src="/src/assets/img/ero.png"/>
                         <div>
-                            <a href="https://github.com/MattKeeley" target="_blank">
+                            <a href="https://github.com/josephH00">
                                 <i class="github"></i>
                             </a>
 
-                            <a href="https://www.linkedin.com/in/mattrkeeley" target="_blank">
+                            <a href="https://www.linkedin.com/in/joseph-hand/" target="_blank">
                                 <i class="linkedin"></i>
                             </a>
+                        </div>
+                    </div>
+                    <div class="col profile">
+                        <p>Ben</p>
+                        <img src="/src/assets/img/ben.png"/>
+                        <div>
+                            <a href="https://github.com/Nightfire-0x07" target="_blank">
+                                <i class="github"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col profile">
+                        <p>Kyle</p>
+                        <img src="/src/assets/img/DevilSecLogo.png"/>
+                        <div>
+                            <a href="https://github.com/KyleMuncie" target="_blank">
+                                <i class="github"></i>
+                            </a>
 
-                            <a href="https://azserg.com/" target="_blank">
-                                <i class="firefox"></i>
+                            <a href="https://twitter.com/MuncieKyle" target="_blank">
+                                <i class="twitter"></i>
+                            </a>
+
+                            <a href="https://www.linkedin.com/in/kylemuncie" target="_blank">
+                                <i class="linkedin"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col profile">
+                        <p>Megi</p>
+                        <img src="/src/assets/img/megi.png"/>
+                        <div>
+                            <a href="https://www.linkedin.com/in/megi-bashi/" target="_blank">
+                                <i class="linkedin"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col profile">
+                        <p>Prithviraj</p>
+                        <img src="/src/assets/img/prithvi.png"/>
+                        <div>
+                            <a href="https://github.com/prithvidiamond1" target="_blank">
+                                <i class="github"></i>
+                            </a>
+
+                            <a href="https://www.linkedin.com/in/prenjell/" target="_blank">
+                                <i class="linkedin"></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <h3>Officers</h3>
+                <h3> Advisors </h3>
                 <div class="row">
                     <div class="col profile">
-                        <b> President:</b>
-                        <p> Lani Sears </p>
-                        <img src="/src/assets/img/lani.png"></img>
-			<div>
-                            <a href="https://github.com/leilanisears" target="_blank">
+                        <p> Pascal-0x09 </p>
+                        <img src="/src/assets/img/pascal.png"/>
+                        <div>
+                            <a href="https://github.com/Pascal-0x90" target="_blank">
                                 <i class="github"></i>
-                            </a>
-
-                            <a href="https://www.linkedin.com/in/leilanisears" target="_blank">
-                                <i class="linkedin"></i>
                             </a>
                         </div>
                     </div>
                     <div class="col profile">
-                        <b> Vice President:</b>
-                        <p> Tayari </p>
-                        <img src="/src/assets/img/tayari.png"></img>
+                        <p> Colt </p>
+                        <img src="/src/assets/img/DevilSecLogo.png"/>
                         <div>
-                            <a href="https://github.com/daylamtayari" target="_blank">
-                                <i class="github"></i>
-                            </a>
-
-                            <a href="https://www.linkedin.com/in/daylamtayari" target="_blank">
-                                <i class="linkedin"></i>
-                            </a>
-
-                            <a href="https://tayari.gg" target="_blank">
-                                <i class="firefox"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col profile">
-                        <b> Treasurer:</b>
-                        <p> Gursharan Singh </p>
-                        <img src="/src/assets/img/singh.png"></img>
-
-                        <div>
-                            <a href="https://twitter.com/Gursharan1337" target="_blank">
-                                <i class="twitter"></i>
-                            </a>
-
-                            <a href="https://www.linkedin.com/in/singh1337/" target="_blank">
+                            <a href="https://www.linkedin.com/in/colton-kohnen" target="_blank">
                                 <i class="linkedin"></i>
                             </a>
                         </div>
                     </div>
-                    <div class="col profile">
-                        <b> Secretary:</b>
-                        <p> Thad Shinno </p>
-                        <img src="/src/assets/img/thad.png"></img>
-                        <div>
-                            <a href="https://github.com/sadeli413" target="_blank">
-                                <i class="github"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <h3> Staff </h3>
-                    <div class="row">
-                        <div class="col profile">
-                            <p>Ero</p>
-                            <img src="/src/assets/img/ero.png"></img>
-                            <div>
-				<a href="https://github.com/josephH00"></img>
-                                <i class="github"></i>
-                                </a>
-
-                                <a href="https://www.linkedin.com/in/joseph-hand/" target="_blank">
-                                    <i class="linkedin"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col profile">
-                            <p>Ben</p>
-                            <img src="/src/assets/img/ben.png"></img>
-                            <div>
-                                <a href="https://github.com/Nightfire-0x07" target="_blank">
-                                    <i class="github"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col profile">
-                            <p>Kyle</p>
-                            <img src="/src/assets/img/DevilSecLogo.png"></img>
-                            <div>
-                                <a href="https://github.com/KyleMuncie" target="_blank">
-                                    <i class="github"></i>
-                                </a>
-
-                                <a href="https://twitter.com/MuncieKyle" target="_blank">
-                                    <i class="twitter"></i>
-                                </a>
-
-				<a href="https://www.linkedin.com/in/kylemuncie" target="_blank">
-					<i class="linkedin"></i>
-				</a>
-                            </div>
-                        </div>
-                        <div class="col profile">
-                            <p>Megi</p>
-                            <img src="/src/assets/img/megi.png"></img>
-			    <div>
-				    <a href="https://www.linkedin.com/in/megi-bashi/" target="_blank">
-				    <i class="linkedin"></i>
-			    </div>
-			    </a>
-			    <div>
-                            </div>
-                        </div>
-                        <div class="col profile">
-                            <p>Prithviraj</p>
-                            <img src="/src/assets/img/prithvi.png"></img>
-                            <div>
-                                <a href="https://github.com/prithvidiamond1" target="_blank">
-                                    <i class="github"></i>
-                                </a>
-
-                                <a href="https://www.linkedin.com/in/prenjell/" target="_blank">
-                                    <i class="linkedin"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-		    <h3> Advisors </h3>
-		    <div class="row">
-			    <div class="col profile">
-				    <p> Pascal-0x09 </p>
-				    <img src="/src/assets/img/pascal.png"></img>
-				    <div>
-					    <a href="https://github.com/Pascal-0x90" target="_blank">
-						    <i class="github"></i>
-					    </a>
-			    </div>
-		    </div>
-		    <div class="col profile">
-			    <p> Colt </p>
-			    <img src="/src/assets/img/DevilSecLogo.png"></img>
-		    <div>
-			<a href="https://www.linkedin.com/in/colton-kohnen" target="_blank">
-				<i class="linkedin"></i>
-			</a>
-		    </div>
-		    </div>
                 </div>
                 <h4> Have questions? </h4>
                 <div>
@@ -208,6 +206,7 @@
                     <p> Both ASU students and non ASU members can feel free to hop in the Discord server and ask questions there as well.</p>
                 </div>
             </div>
+        </div>
     </body>
 </html>
 
