Fixed videos HTML

--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -11,12 +11,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 text-left" id="subheading">
+                <div class="col-sm-12 text-left subheading">
                     <h3>2022</h3>
                     <hr>
                 </div>
             </div>
-            <div class="row" id="video-cards">
+            <div class="row video-cards">
                 <div class="card border-dark mb-3" style="max-width: 18rem;">
                     <div class="card-header bg-transparent border-dark">
                         <h5 class="card-title">
@@ -25,16 +25,16 @@
                     </div>
                     <div class="card-body text-dark">
                         <p class="card-text">
-                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
                         </p>
                     </div>
                     <div class="card-footer bg-transparent border-dark">
                         <b>Presenter</b>: Somebody
                         <br>
                         <b>Date</b>: 01/29/2022
-                        <div id="card-tags">
+                        <div class="card-tags">
                             <b>Tags: </b>
-                            <button id="tags" type="button" class="btn btn-secondary">
+                            <button type="button" class="tags btn btn-secondary">
                                 Linux
                             </button>
                         </div>
@@ -48,16 +48,16 @@
                     </div>
                     <div class="card-body text-dark">
                         <p class="card-text">
-                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
                         </p>
                     </div>
                     <div class="card-footer bg-transparent border-dark">
                         <b>Presenter</b>: Somebody
                         <br>
                         <b>Date</b>: 01/29/2022
-                        <div id="card-tags">
+                        <div class="card-tags">
                             <b>Tags: </b>
-                            <button id="tags" type="button" class="btn btn-secondary">
+                            <button type="button" class="tags btn btn-secondary">
                                 Linux
                             </button>
                         </div>
@@ -71,16 +71,16 @@
                     </div>
                     <div class="card-body text-dark">
                         <p class="card-text">
-                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
                         </p>
                     </div>
                     <div class="card-footer bg-transparent border-dark">
                         <b>Presenter</b>: Somebody
                         <br>
                         <b>Date</b>: 01/29/2022
-                        <div id="card-tags">
+                        <div class="card-tags">
                             <b>Tags: </b>
-                            <button id="tags" type="button" class="btn btn-secondary">
+                            <button type="button" class="tags btn btn-secondary">
                                 Linux
                             </button>
                         </div>
@@ -88,12 +88,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 text-left" id="subheading">
+                <div class="col-sm-12 text-left subheading">
                     <h3>2021</h3>
                     <hr>
                 </div>
             </div>
-            <div class="row" id="video-cards">
+            <div class="row video-cards">
                 <div class="card border-dark mb-3" style="max-width: 18rem;">
                     <div class="card-header bg-transparent border-dark">
                         <h5 class="card-title">
@@ -102,16 +102,16 @@
                     </div>
                     <div class="card-body text-dark">
                         <p class="card-text">
-                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
                         </p>
                     </div>
                     <div class="card-footer bg-transparent border-dark">
                         <b>Presenter</b>: Somebody
                         <br>
                         <b>Date</b>: 01/29/2021
-                        <div id="card-tags">
+                        <div class="card-tags">
                             <b>Tags: </b>
-                            <button id="tags" type="button" class="btn btn-secondary">
+                            <button type="button" class="tags btn btn-secondary">
                                 Linux
                             </button>
                         </div>
@@ -125,16 +125,16 @@
                     </div>
                     <div class="card-body text-dark">
                         <p class="card-text">
-                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
                         </p>
                     </div>
                     <div class="card-footer bg-transparent border-dark">
                         <b>Presenter</b>: Somebody
                         <br>
                         <b>Date</b>: 01/29/2021
-                        <div id="card-tags">
+                        <div class="card-tags">
                             <b>Tags: </b>
-                            <button id="tags" type="button" class="btn btn-secondary">
+                            <button type="button" class="tags btn btn-secondary">
                                 Linux
                             </button>
                         </div>
