--- a/src/pages/offerings.html
+++ b/src/pages/offerings.html
@@ -5,52 +5,44 @@
         <base target="_blank">
     </head>
     <body>
-        <div class="container-fluid row text-center">
-		<h1> What does DevilSec offer? </h1> 
-		<div class="col card text-white bg-secondary mb-3">
+    <div class="container-fluid row text-center justify-content-center">
+	<h1>What does DevilSec offer?</h1>
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-dark">
 			<div class="card-header"> 1 on 1 Mentoring</div>
-			<img class="card-img-top"></img>
 			<div class="card-body">
 			<p>DevilSec can provide hands on training from senior level members, some of whom already work in the info sec industry. Attend a meeting in person or reach out on Discord using one the server's many channels to get the appropriate support you need.</p>
 			</div>
 		</div>
-		<div class="col card text-white bg-secondary mb-3">
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-secondary">
 			<div class="card-header"> Intro to Linux and Command Line </div>
-			<img class="card-img-top"></img>
 			<div class="card-body">
 			<p>  Several staff members use Linux as their daily driver and can provide advice and suggestions on how to improve. Some members start with zero knowledge of Linux and the terminal and are able to learn very quickly and apply their skills right away.</p>
 			</div>
 		</div>
-		<div class="col card text-white bg-secondary mb-3">
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-secondary">
 			<div class="card-header"> Project Based Learning Opportunities</div>
-			<img class="card-img-top"></img>
 			<div class="card-body">
 			<p> DevilSec continues to grow! Staff need volunteers when it comes to building CTF infrastructure, educational materials, and other web based technologies. There are new projects every year and all members are welcome to join projects and learn along the way. </p>
 			</div>
 		</div>
-		<div class="col card text-white bg-secondary mb-3">
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-secondary">
 			<div class="card-header"> Guest Speakers </div>
-			<img class="card-img-top"></img>
 			<div class="card-body">
 				<p> We find industry professionals to give presentations on their projects, work, and how they got into their fields. These talks provide opportunities for Q&A and getting advice on networking and bolstering your professional portfolio. These speaking events are usually are most popular ones to attend!</p>
+			</div>
 		</div>
-	</div>
-	<div class="row text-center">
-		<div class="col card text-white bg-secondary md-3">
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-secondary">
 			<div class="card-header"> Networking </div>
-			<img class="card-img-top"></img>
 			<div class="card-body">
 				<p> Whether you are a virtual participant or an in-person member, DevilSec includes working professionals who regularly post job openings and internship opportunities. On campus events provide a way to introduce yourself and get more involved while virtual meetings and discussions can help other members get to know you better and offer advice based on your interests.</p>
 			</div>
 		</div>
-		<div class="col card text-white bg-secondary md-3">
+		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-secondary">
                         <div class="card-header"> Community </div>
-                        <img class="card-img-top"></img>
                         <div class="card-body">
                                 <p> Our group enjoys learning and teaching new tools, playing Hack the Box as a group, and just chatting in voice channels in Discord. We encourage a welcoming atmosphere so anyone at any level regardless of their background can join and start learning at their own pace while having access to support when they need it. </p>
                         </div>
                 </div>
-
-	</div>
+                </div>
     </body>
 </html>
