--- a/src/pages/offerings.html
+++ b/src/pages/offerings.html
@@ -8,7 +8,7 @@
     <div class="container-fluid row text-center justify-content-center">
 	<h1>What does DevilSec offer?</h1>
 		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-dark highlight">
-			<img src="/src/assets/img/circuit.jpg" class="card-img-top">
+			<img src="/src/assets/img/mentor.jpg" class="card-img-top">
 			<div class="card-header"> 1 on 1 Mentoring</div>
 			<div class="card-body">
 			<p>DevilSec can provide hands on training from senior level members, some of whom already work in the info sec industry. 
@@ -17,14 +17,14 @@
 			</div>
 		</div>
 		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-dark highlight">
-			<img src="/src/assets/img/circuit.jpg" class="card-img-top">	
+			<img src="/src/assets/img/command.jpg" class="card-img-top">	
 			<div class="card-header"> Intro to Linux and Command Line </div>
 			<div class="card-body">
 				<p>  Several staff members use Linux as their daily driver and can provide advice and suggestions on how to improve. <br></br>Some members started with zero knowledge of Linux and the terminal and were able to learn and apply their skills right away.</p>
 			</div>
 		</div>
 		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-dark highlight">
-			<img src="/src/assets/img/circuit.jpg" class="card-img-top">
+			<img src="/src/assets/img/projects2.jpg" class="card-img-top">
 			<div class="card-header"> Project Based Learning Opportunities</div>
 			<div class="card-body">
 				<p> DevilSec continues to grow! Staff need volunteers when it comes to building CTF infrastructure, educational materials, and other web based technologies. <br></br>There are new projects every year and all members are welcome to join projects and learn along the way. </p>
@@ -38,14 +38,14 @@
 			</div>
 		</div>
 		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-dark highlight">
-			<img src="/src/assets/img/circuit.jpg" class="card-img-top">
+			<img src="/src/assets/img/fiber.jpg" class="card-img-top">
 			<div class="card-header"> Networking </div>
 			<div class="card-body">
 				<p> Whether you are a virtual participant or an in-person member, DevilSec includes working professionals who regularly post job openings and internship opportunities. <br></br>On campus events provide a way to introduce yourself and get more involved while virtual meetings and discussions can help other members get to know you better and offer advice based on your interests.</p>
 			</div>
 		</div>
 		<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 card bg-dark highlight">
-			<img src="/src/assets/img/circuit.jpg" class="card-img-top">
+			<img src="/src/assets/img/community.jpg" class="card-img-top">
                         <div class="card-header"> Community </div>
                         <div class="card-body">
 							<p> Our group enjoys learning and teaching new tools, playing Hack the Box as a group, and just chatting in voice channels in Discord.<br></br> We encourage a welcoming atmosphere so anyone at any level regardless of their background can join and start learning at their own pace while having access to support when they need it. </p>
