Added Open Graph meta tags for all the pages

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <title>DevilSec</title>
+    <meta property="og:title" content="DevilSec" />
+    <meta property="og:description" content="ASU's Cybersecurity Club" />
+    <meta property="og:image" content="assets/img/DevilSecLogo.png" />
+    <meta property="og:type" content="website" />
 </head>
 <body>
     <main style="margin-bottom:15px;">
