--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <title>About DevilSec</title>
+        <meta property="og:title" content="About Us | DevilSec" />
+        <meta property="og:description" content="ASU's Cybersecurity Club" />
+        <meta property="og:image" content="../assets/img/DevilSecLogo.png" />
+        <meta property="og:type" content="website" />
         <!--<base target="_blank">-->
     </head>
     <body>
