--- a/src/pages/connect.html
+++ b/src/pages/connect.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <title>DevilSec Get Connected</title>
+        <meta property="og:title" content="Connect With Us | DevilSec" />
+		<meta property="og:description" content="ASU's Cybersecurity Club" />
+		<meta property="og:image" content="../assets/img/DevilSecLogo.png" />
+        <meta property="og:type" content="website" />
     </head>
     <body>
         <div class="container-fluid row text-center" style="padding-top: 70px; padding-bottom: 60px;">
