--- a/src/pages/schedule.html
+++ b/src/pages/schedule.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <title>DevilSec Schedule</title>
+        <meta property="og:title" content="Event Schedule | DevilSec" />
+        <meta property="og:description" content="ASU's Cybersecurity Club" />
+        <meta property="og:image" content="../assets/img/DevilSecLogo.png" />
+        <meta property="og:type" content="website" />
     </head>
     <body>
         <div class="container-fluid row text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">
