--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <title>DevilSec Club Recordings</title>
+        <meta property="og:title" content="Club Recordings | DevilSec" />
+        <meta property="og:description" content="ASU's Cybersecurity Club" />
+        <meta property="og:image" content="../assets/img/DevilSecLogo.png" />
+        <meta property="og:type" content="website" />
     </head>
     <body>
         <div class="container-fluid row text-center" style="padding-top: 60px; padding-left: 40px; padding-bottom: 40px;">
