--- a/src/pages/schedule.html
+++ b/src/pages/schedule.html
@@ -25,6 +25,7 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item h4"><i class="calendar"></i><span class="modal-date"></span></li>
                                 <li class="list-group-item h4"><i class="clock"></i><span class="modal-time"></span></li>
+                                <li class="list-group-item h4"><i class="stopwatch"></i><span class="modal-duration"></span></li>
                                 <li class="list-group-item h4"><a href="" target="_blank" class="location-link"><i class="location"></i><span class="modal-loc"></span></a></li>
                             </ul>
                         </div>
@@ -52,13 +53,14 @@
                     <div class="row gx-5">
                         <div id="upcoming-0" class="col-sm-3">
                             <button type="button" class="schedule-card next-4" data-bs-toggle="modal" data-bs-target="#eventModal"
-                                data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-loc="[Location]"
+                                data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-duration="[Duration]" data-bs-loc="[Location]"
                                 data-bs-loc-url="{{ Location URL }}"  data-bs-speakers="[Speakers]" data-bs-desc="[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]" data-bs-ics-url="{{ ICS URL }}"
                                 >
                                 <h3 class="card-title">[Name]</h3>
                                 <ul class="list-group center list-group-flush">
                                     <li class="list-group-item h5"><i class="calendar"></i>[Date]</li>
                                     <li class="list-group-item h5"><i class="clock"></i>[Time]</li>
+                                    <li class="list-group-item h5"><i class="stopwatch"></i>[Duration]</li>
                                     <li class="list-group-item h5"><i class="location"></i>[Location]</li>
                                 </ul>
                                 <div class="card-text">
@@ -68,13 +70,14 @@
                         </div>
                         <div id="upcoming-1" class="col-sm-3">
                             <button type="button" class="schedule-card next-4" data-bs-toggle="modal" data-bs-target="#eventModal"
-                                data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-loc="[Location]"
+                                data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-duration="[Duration]" data-bs-loc="[Location]"
                                 data-bs-loc-url="{{ Location URL }}"  data-bs-speakers="[Speakers]" data-bs-desc="[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]" data-bs-ics-url="{{ ICS URL }}"
                                 >
                                 <h3 class="card-title">[Name]</h3>
                                 <ul class="list-group center list-group-flush">
                                     <li class="list-group-item h5"><i class="calendar"></i>[Date]</li>
                                     <li class="list-group-item h5"><i class="clock"></i>[Time]</li>
+                                    <li class="list-group-item h5"><i class="stopwatch"></i>[Duration]</li>
                                     <li class="list-group-item h5"><i class="location"></i>[Location]</li>
                                 </ul>
                                 <div class="card-text">
@@ -84,13 +87,14 @@
                         </div>
                         <div id="upcoming-2" class="col-sm-3">
                             <button type="button" class="schedule-card next-4" data-bs-toggle="modal" data-bs-target="#eventModal"
-                                data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-loc="[Location]"
+                                data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-duration="[Duration]" data-bs-loc="[Location]"
                                 data-bs-loc-url="{{ Location URL }}"  data-bs-speakers="[Speakers]" data-bs-desc="[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]" data-bs-ics-url="{{ ICS URL }}"
                                 >
                                 <h3 class="card-title">[Name]</h3>
                                 <ul class="list-group center list-group-flush">
                                     <li class="list-group-item h5"><i class="calendar"></i>[Date]</li>
                                     <li class="list-group-item h5"><i class="clock"></i>[Time]</li>
+                                    <li class="list-group-item h5"><i class="stopwatch"></i>[Duration]</li>
                                     <li class="list-group-item h5"><i class="location"></i>[Location]</li>
                                 </ul>
                                 <div class="card-text">
@@ -100,13 +104,14 @@
                         </div>
                         <div id="upcoming-3" class="col-sm-3">
                             <button type="button" class="schedule-card next-4" data-bs-toggle="modal" data-bs-target="#eventModal"
-                                data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-loc="[Location]"
+                                data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-duration="[Duration]" data-bs-loc="[Location]"
                                 data-bs-loc-url="{{ Location URL }}"  data-bs-speakers="[Speakers]" data-bs-desc="[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]" data-bs-ics-url="{{ ICS URL }}"
                                 >
                                 <h3 class="card-title">[Name]</h3>
                                 <ul class="list-group center list-group-flush">
                                     <li class="list-group-item h5"><i class="calendar"></i>[Date]</li>
                                     <li class="list-group-item h5"><i class="clock"></i>[Time]</li>
+                                    <li class="list-group-item h5"><i class="stopwatch"></i>[Duration]</li>
                                     <li class="list-group-item h5"><i class="location"></i>[Location]</li>
                                 </ul>
                                 <div class="card-text">
@@ -127,13 +132,14 @@
                                 <div class="row row-cols-1">
                                     <div id="category-0" class="col">
                                         <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal"
-                                            data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-loc="[Location]"
+                                            data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-duration="[Duration]" data-bs-loc="[Location]"
                                             data-bs-loc-url="{{ Location URL }}"  data-bs-speakers="[Speakers]" data-bs-desc="[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]" data-bs-ics-url="{{ ICS URL }}"
                                             >
                                             <h3 class="card-title">[Name]</h3>
                                             <ul class="list-group center list-group-flush">
                                                 <li class="list-group-item h5"><i class="calendar"></i>[Date]</li>
                                                 <li class="list-group-item h5"><i class="clock"></i>[Time]</li>
+                                                <li class="list-group-item h5"><i class="stopwatch"></i>[Duration]</li>
                                                 <li class="list-group-item h5"><i class="location"></i>[Location]</li>
                                             </ul>
                                             <div class="card-text">
@@ -150,13 +156,14 @@
                                 <div class="row row-cols-1">
                                     <div id="category-1" class="col">
                                         <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal"
-                                            data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-loc="[Location]"
+                                            data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-duration="[Duration]" data-bs-loc="[Location]"
                                             data-bs-loc-url="{{ Location URL }}"  data-bs-speakers="[Speakers]" data-bs-desc="[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]" data-bs-ics-url="{{ ICS URL }}"
                                             >
                                             <h3 class="card-title">[Name]</h3>
                                             <ul class="list-group center list-group-flush">
                                                 <li class="list-group-item h5"><i class="calendar"></i>[Date]</li>
                                                 <li class="list-group-item h5"><i class="clock"></i>[Time]</li>
+                                                <li class="list-group-item h5"><i class="stopwatch"></i>[Duration]</li>
                                                 <li class="list-group-item h5"><i class="location"></i>[Location]</li>
                                             </ul>
                                             <div class="card-text">
@@ -173,13 +180,14 @@
                                 <div class="row row-cols-1">
                                     <div id="category-2" class="col">
                                         <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal"
-                                            data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-loc="[Location]"
+                                            data-bs-name="[Name]" data-bs-date="[Date]" data-bs-time="[Time]" data-bs-duration="[Duration]" data-bs-loc="[Location]"
                                             data-bs-loc-url="{{ Location URL }}"  data-bs-speakers="[Speakers]" data-bs-desc="[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]" data-bs-ics-url="{{ ICS URL }}"
                                             >
                                             <h3 class="card-title">[Name]</h3>
                                             <ul class="list-group center list-group-flush">
                                                 <li class="list-group-item h5"><i class="calendar"></i>[Date]</li>
                                                 <li class="list-group-item h5"><i class="clock"></i>[Time]</li>
+                                                <li class="list-group-item h5"><i class="stopwatch"></i>[Duration]</li>
                                                 <li class="list-group-item h5"><i class="location"></i>[Location]</li>
                                             </ul>
                                             <div class="card-text">
