adding zi to staff section

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -182,6 +182,12 @@
                             </a>
                         </div>
                     </div>
+                    <div class="col profile">
+                        <p> Zi Jia Tan </p>
+                        <img src="/src/assets/img/zi.png">
+                        <div>
+                        </div>
+                    </div>
                 </div>
                 <h3> Advisors </h3>
                 <div class="row">
