Implemented basic dynamic fetching of card information from the video-index repo in videosgen.py. Changes need to be tested. Added a script in package.json to run videosgen.py upon build

--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -24,27 +24,30 @@
                 <div class="card border-dark mb-3" style="max-width: 18rem;">
                     <div class="card-header bg-transparent border-dark">
                         <h5 class="card-title">
-                            <b>Club recording 1</b>
+                            <b>[Title]</b>
                         </h5>
                     </div>
                     <div class="card-body text-dark">
                         <p class="card-text">
-                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
+                        <iframe class="video-embed" src="{{Video URL}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
                         </p>
                     </div>
                     <div class="card-footer bg-transparent border-dark">
-                        <b>Presenter</b>: Somebody
+                        <!-- <b>Speakers</b>: Somebody -->
                         <br>
-                        <b>Date</b>: 01/29/2022
+                        <b>Date</b>: [Date]
                         <div class="card-tags">
                             <b>Tags: </b>
                             <button type="button" class="tags btn btn-secondary">
-                                Linux
+                                [Tags]
                             </button>
+                        </div>
+                        <div class="card-text">
+                            <p>[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]</p>
                         </div>
                     </div>
                 </div>
-                <div class="card border-dark mb-3" style="max-width: 18rem;">
+                <!-- <div class="card border-dark mb-3" style="max-width: 18rem;">
                     <div class="card-header bg-transparent border-dark">
                         <h5 class="card-title">
                             <b>Club recording 2</b>
@@ -143,7 +146,7 @@
                             </button>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </body>
