completed videosgen.py script to the point that it runs without errors and modifies videos.html. Modification is still not appropriate but will be fixed in the upcoming pull requests

--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -20,7 +20,7 @@
                     <hr>
                 </div>
             </div>
-            <div class="row video-cards">
+            <div id="videos" class="row video-cards">
                 <div class="card border-dark mb-3" style="max-width: 18rem;">
                     <div class="card-header bg-transparent border-dark">
                         <h5 class="card-title">
