this is so cursed

--- a/src/pages/schedule.html
+++ b/src/pages/schedule.html
@@ -124,7 +124,7 @@
 
                 <hr class="schedule-divider">
 
-                <div class="container-fluid text-center px-4">
+                <div class="container-fluid text-center px-4" style="padding-bottom: 1325px !important;">
                     <div class="row gx-5">
                         <div class="col-lg-4">
                             <div class="schedule-category">
