--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -15,7 +15,7 @@
             <p>DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.
             </p>
         </div>
-        <div class="container-fluid row text-center">
+        <div class="container-fluid row text-center" style="padding-bottom: 1190px !important;">
             <h3>Founders</h3>
             <div class="row">
                 <div class="col profile">
