--- a/src/pages/offerings.html
+++ b/src/pages/offerings.html
@@ -8,7 +8,7 @@
         <meta property="og:type" content="website" />
     </head>
     <body>
-        <div class="container-fluid row text-center justify-content-center">
+        <div class="container-fluid row text-center justify-content-center" style="padding-bottom: 1250px !important;">
             <h1>What does DevilSec offer?</h1>
             <div class="card">
                 <img src="/src/assets/img/mentor.jpg" class="card-img-top">
