--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -38,12 +38,14 @@
                         <b>Date</b>: [Date]
                         <div class="card-tags">
                             <b>Tags: </b>
-                            <button type="button" class="tags btn btn-secondary">
+                            <button id="tag-buttons" type="button" class="tags btn btn-secondary">
                                 [Tags]
                             </button>
                         </div>
                         <div class="card-text">
-                            <p>[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]</p>
+                            <p>
+                                <b>Description: </b> 
+                                [Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]</p>
                         </div>
                     </div>
                 </div>
