Completed foundations of the home page and sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>DevilSec</title>
-    <meta property="og:title" content="DevilSec" />
-    <meta property="og:description" content="ASU's Cybersecurity Club" />
-    <meta property="og:image" content="assets/img/DevilSecLogo.png" />
-    <meta property="og:type" content="website" />
-</head>
-<body>
-        <div class="container-fluid text-center">
-            <div class="container">
-                <div class="p-5 my-4 bg-light rounded-3">
-                    <h1 class="style2" style="font-size:150px;">DevilSec</h1>
-
-                    <p class="lead">Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
-
-                    <p><a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a> <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a> <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a> <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a></p>
+    <head>
+        <title>DevilSec</title>
+        <meta property="og:title" content="DevilSec">
+        <meta property="og:description" content="ASU's Cybersecurity Club">
+        <meta property="og:image" content="assets/img/DevilSecLogo.png">
+        <meta property="og:type" content="website">
+    </head>
+    <body>
+        <div class="container-fluid row text-center justify-content-center">
+            <div class="col-md-9">
+                <div id="main-row" class="row center">
                 </div>
+            </div>
 
-                <div class="grid2x2">
-                    <div class="col-md-5 boxes">
-                        <h2>HEADER1</h2>
-
-                        <p>Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
-
-                        <p><a href="https://www.tutorialrepublic.com/html-tutorial/" target="_blank" class="btn btn-success">Learn More »</a>
-                        </p>
+            <div class="col-md-3">
+                <div class="row center">
+                    <div id="discord" class="card">
+                        <a href="https://discord.devilsec.org" target="_blank">
+                            <h2>Join the community on Discord!</h2>
+                            <i class="discord"></i>
+                        </a>
                     </div>
 
-                    <div class="col-md-5 boxes">
-                        <h2>HEADER2</h2>
-
-                        <p>Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
-
-                        <p><a href="https://www.tutorialrepublic.com/css-tutorial/" target="_blank" class="btn btn-success">Learn More »</a>
-                        </p>
+                    <div id="next-event" class="card">
+                        <h2>Come to our next event!</h2>
+                        <div id="event-card" class="card">
+                            <h3>[TITLE]</h3>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <i class="calendar"></i><h4>[DATE]</h4>
+                                </div>
+                                <div class="col-md-3">
+                                    <i class="clock"></i><h4>[TIME]</h4>
+                                </div>
+                                <div class="col-md-3">
+                                    <i class="stopwatch"></i><h4>[DURATION]</h4>
+                                </div>
+                                <div class="col-md-3">
+                                    <i class="location"></i><h4>[LOCATION]</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <br/>
+                        <a id="schedule-link" href="/schedule.html"><h3>Check out more of our upcoming events!</h3></a>
                     </div>
 
-                    <div class="col-md-5 boxes">
-                        <h2>HEADER3</h2>
-
-                        <p>Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
-
-                        <p><a href="https://www.tutorialrepublic.com/javascript-tutorial/" target="_blank" class="btn btn-success">Learn More »</a>
-                        </p>
-                    </div>
-
-                    <div class="col-md-5 boxes">
-                        <h2>HEADER4</h2>
-
-                        <p>Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
-
-                        <p><a href="https://www.tutorialrepublic.com/twitter-bootstrap-tutorial/" target="_blank" class="btn btn-success">Learn More »</a>
-                        </p>
+                    <div id="twitter" class="card">
+                        <a class="twitter-timeline" data-height="1000" data-dnt="true" data-theme="dark" href="https://twitter.com/DevilSecASU?ref_src=twsrc%5Etfw">Tweets by DevilSecASU</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                 </div>
             </div>
         </div>
-</body>
+    </body>
 </html>
