--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,17 @@
         <div class="container-fluid row text-center justify-content-center">
             <div class="col-md-9">
                 <div id="main-row" class="row center">
+                    <div id="about" class="card">
+                        <h1>About DevilSec</h1>
+                        <br>
+                        <br>
+                        <p>
+                        DevilSec was founded as a student group at ASU to socialize, network, and learn the current industry standard tools of the cybersecurity field. The group serves as an entry point for students of computer science and other majors to compensate for the lack of current offensive cybersecurity curriculum universities' lack or otherwise teach using dated and irrelevant information and resources.
+                        <br>
+                        <br>
+                        DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -42,7 +53,7 @@
                                 </div>
                             </div>
                         </div>
-                        <br/>
+                        <br>
                         <a id="schedule-link" href="/schedule.html"><h3>Check out more of our upcoming events!</h3></a>
                     </div>
 
