--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,37 @@
     <body>
         <div class="container-fluid row text-center justify-content-center">
             <div class="col-md-9">
-                <div id="main-row" class="row center">
-                    <div id="about" class="card">
-                        <h1>About DevilSec</h1>
-                        <br>
-                        <br>
-                        <p>
-                        DevilSec was founded as a student group at ASU to socialize, network, and learn the current industry standard tools of the cybersecurity field. The group serves as an entry point for students of computer science and other majors to compensate for the lack of current offensive cybersecurity curriculum universities' lack or otherwise teach using dated and irrelevant information and resources.
-                        <br>
-                        <br>
-                        DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.
-                        </p>
+                <div id="about" class="card">
+                    <h1>About DevilSec</h1>
+                    <br>
+                    <br>
+                    <p>
+                    DevilSec was founded as a student group at ASU to socialize, network, and learn the current industry standard tools of the cybersecurity field. The group serves as an entry point for students of computer science and other majors to compensate for the lack of current offensive cybersecurity curriculum universities' lack or otherwise teach using dated and irrelevant information and resources.
+                    <br>
+                    <br>
+                    DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.
+                    </p>
+                </div>
+                <div id="offerings" class="card">
+                    <h2>What we Offer?</h2>
+                    <br>
+                    <div class="row center">
+                        <div class="card offering-card">
+                            <h4>Presentations</h4>
+                            <p>Weekly educational presentations on a variety of pertinent offensive and defensive security topics, usually paired with a custom lab.</p>
+                        </div>
+                        <div class="card offering-card">
+                            <h4>Guest Talks</h4>
+                            <p>Guest talks by a variety of infosec professionals providing industry insight and detailed presentations on a multitude of subjects.</p>
+                        </div>
+                        <div class="card offering-card">
+                            <h4>Networking</h4>
+                            <p>Network with recruiters, industry professionals and fellow cybersecurity students within our Discord community.</p>
+                        </div>
+                        <div class="card offering-card">
+                            <h4>Competitions</h4>
+                            <p>Compete in renowned collegiate competitions such as CCDC where you can put your skills to the test in a real world environment and network with sponsors.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -55,6 +75,16 @@
                         </div>
                         <br>
                         <a id="schedule-link" href="/schedule.html"><h3>Check out more of our upcoming events!</h3></a>
+                    </div>
+
+                    <div id="socials" class="card">
+                        <h2>Connect with us across socials!</h2>
+                        <div class="row center">
+                            <a class="soc-icons" href="https://twitter.com/devilsecasu"><i class="twitter"></i></a>
+                            <a class="soc-icons" href="https://youtube.com/channel/UCMa2NO8KJ4DaTQ1i507nVcQ"><i class="youtube"></i></a>
+                            <a class="soc-icons" href="https://twitch.tv/devilsec"><i class="twitch"></i></a>
+                            <a class="soc-icons" href="https://github.com/devilsec"><i class="github"></i></a>
+                        </div>
                     </div>
 
                     <div id="twitter" class="card">
