--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
 
                     <div id="twitter" class="card">
                         <a class="twitter-timeline" data-height="1000" data-dnt="true" data-theme="dark" href="https://twitter.com/DevilSecASU?ref_src=twsrc%5Etfw">Tweets by DevilSecASU</a>
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>
                 </div>
             </div>
