Fixed offerings page title

--- a/src/pages/offerings.html
+++ b/src/pages/offerings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <title>DevilSec Offers</title>
+        <title>DevilSec Offerings</title>
         <meta property="og:title" content="Our Offerings | DevilSec" />
         <meta property="og:description" content="ASU's Cybersecurity Club" />
         <meta property="og:image" content="../assets/img/DevilSecLogo.png" />
