--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div id="videos" class="row video-cards">
-                <div class="card border-dark mb-3" style="max-width: 18rem;">
+                <div id="video" class="card border-dark mb-3" style="max-width: 18rem;">
                     <div class="card-header bg-transparent border-dark">
                         <h5 class="card-title">
                             <b>[Title]</b>
@@ -44,111 +44,11 @@
                         </div>
                         <div class="card-text">
                             <p>
-                                <b>Description: </b> 
-                                [Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]</p>
+                            <b>Description: </b>
+                            [Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]</p>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="card border-dark mb-3" style="max-width: 18rem;">
-                    <div class="card-header bg-transparent border-dark">
-                        <h5 class="card-title">
-                            <b>Club recording 2</b>
-                        </h5>
-                    </div>
-                    <div class="card-body text-dark">
-                        <p class="card-text">
-                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
-                        </p>
-                    </div>
-                    <div class="card-footer bg-transparent border-dark">
-                        <b>Presenter</b>: Somebody
-                        <br>
-                        <b>Date</b>: 01/29/2022
-                        <div class="card-tags">
-                            <b>Tags: </b>
-                            <button type="button" class="tags btn btn-secondary">
-                                Linux
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="card border-dark mb-3" style="max-width: 18rem;">
-                    <div class="card-header bg-transparent border-dark">
-                        <h5 class="card-title">
-                            <b>Club recording 3</b>
-                        </h5>
-                    </div>
-                    <div class="card-body text-dark">
-                        <p class="card-text">
-                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
-                        </p>
-                    </div>
-                    <div class="card-footer bg-transparent border-dark">
-                        <b>Presenter</b>: Somebody
-                        <br>
-                        <b>Date</b>: 01/29/2022
-                        <div class="card-tags">
-                            <b>Tags: </b>
-                            <button type="button" class="tags btn btn-secondary">
-                                Linux
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 text-left subheading">
-                    <h3>2021</h3>
-                    <hr>
-                </div>
-            </div>
-            <div class="row video-cards">
-                <div class="card border-dark mb-3" style="max-width: 18rem;">
-                    <div class="card-header bg-transparent border-dark">
-                        <h5 class="card-title">
-                            <b>Club recording 4</b>
-                        </h5>
-                    </div>
-                    <div class="card-body text-dark">
-                        <p class="card-text">
-                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
-                        </p>
-                    </div>
-                    <div class="card-footer bg-transparent border-dark">
-                        <b>Presenter</b>: Somebody
-                        <br>
-                        <b>Date</b>: 01/29/2021
-                        <div class="card-tags">
-                            <b>Tags: </b>
-                            <button type="button" class="tags btn btn-secondary">
-                                Linux
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="card border-dark mb-3" style="max-width: 18rem;">
-                    <div class="card-header bg-transparent border-dark">
-                        <h5 class="card-title">
-                            <b>Club recording 5</b>
-                        </h5>
-                    </div>
-                    <div class="card-body text-dark">
-                        <p class="card-text">
-                        <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; allowfullscreen"></iframe>
-                        </p>
-                    </div>
-                    <div class="card-footer bg-transparent border-dark">
-                        <b>Presenter</b>: Somebody
-                        <br>
-                        <b>Date</b>: 01/29/2021
-                        <div class="card-tags">
-                            <b>Tags: </b>
-                            <button type="button" class="tags btn btn-secondary">
-                                Linux
-                            </button>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </body>
